ecmascript/parser/tests/test262-error-references/fail/f3bcafbbae99ba29.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/f3bcafbbae99ba29.js:1:7
  |
1 | ({ 42 }) = obj
  |       ^

error: TS2406
 --> $DIR/tests/test262-parser/fail/f3bcafbbae99ba29.js:1:1
  |
1 | ({ 42 }) = obj
  | ^^^^^^^^

